--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ip-address-tracker",
+  "homepage": "https://TuborJan.github.io/ip-address-tracker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://TuborJan.github.io/addresstracker",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
