--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ip-address-tracker",
-  "homepage": "https://TuborJan.github.io/ip-address-tracker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://TuborJan.github.io/ip-address-tracker",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -23,9 +23,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "test": "react-scripts test",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
